scrollbar fix

--- a/src/components/admin-table/admin-table.scss
+++ b/src/components/admin-table/admin-table.scss
@@ -61,6 +61,10 @@ p.infoText {
     background-color: lightgrey;
   }
 
+  .react-grid-HeaderRow {
+    overflow: hidden;
+  }
+  
   .react-grid-Toolbar {
     border-style: none;
     height: 100px;
@@ -75,7 +79,7 @@ p.infoText {
   .react-grid-Main {
     outline: 0;
     top: -1.5em;
-    position: relative; 
+    position: relative;
   }
 
   .react-grid-Toolbar .btn {
